--- a/estilos.css
+++ b/estilos.css
@@ -111,21 +111,17 @@ nav a {
   transform: none;
 }
 
+/**/
 .slider-img {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.slider-img img {
-    transform: translateY(-200px);
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
+
 
 #prev, #next {
     font-size: 48px;
@@ -864,11 +860,24 @@ nav a {
 
   #carousel h2 {
     padding: 20px;
-    font-size: 28px;
+    font-size: 28px;s
   }
 
   .carousel-item img {
     width: 90%;
     height: auto;
   }
+  .slider-img {
+  flex-direction: column;
+}
+
+.slider-img img {
+  width: 100%;
+  height: auto;
+  max-height: 60vh;
+  object-fit: cover;
+  transform: none;
+}
+
+
 }
